apps/clubs/ingenieuses/website/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingenieuses
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: ingenieuses-tls
      hosts:
        - ingenieuses.ca
        - www.ingenieuses.ca
  rules:
    - host: ingenieuses.ca
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingenieuses-svc
                port:
                  number: 80
    - host: www.ingenieuses.ca
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ingenieuses-svc
                port:
                  number: 80
